Add GraalVM native image support with Azul NIK